# ArduPilotLogReviewer

./: .gitignore  ArduPilotLogReviewer.ipynb  ArduPilotLogReviewer.py  LICENSE  README.md  example.ipynb  example.py  pyproject.toml  requirements.txt  setup.py
csvs/2026-03-26/: ATT_2026-03-26.csv  BARO[0]_2026-03-26.csv  BARO[1]_2026-03-26.csv  BAT[0]_2026-03-26.csv  ESC[10].RPM_2026-03-26.csv  ESC[11].RPM_2026-03-26.csv  ESC[9].RPM_2026-03-26.csv  FILTER_REVIEW_TUNE_False_2026-03-26.csv  FILTER_REVIEW_TUNE_True_2026-03-26.csv  GPS[0]_2026-03-26.csv  MAG[0]_2026-03-26.csv  MAG[1]_2026-03-26.csv  POWR_2026-03-26.csv  RCOU_2026-03-26.csv  VIBEVIBE[1]_2026-03-26.csv  VIBE[0]_2026-03-26.csv  VIBE[1]_2026-03-26.csv  VIBE[2]_2026-03-26.csv
examples/: example.ipynb  example.py  example_filter_review.ipynb  example_normal_log_review.ipynb  example_normal_log_review.py  filter_review_test.ipynb
src/ArduPilotLogReviewer.egg-info/: PKG-INFO
src/ardupilot_log_reviewer/: ArduPilotFilterReviewer.py  ArduPilotLogReviewer.py  __init__.py  cli.py
summaries/2026-03-26/: SUMMARY_2026-03-26.txt
