[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ArduPilotLogReviewer"
version = "0.1.0"
description = "A Python-based tool for automated analysis and visualisation of ArduPilot DataFlash logs."
authors = [{name = "Sukhbir Mahal"}]
requires-python = ">=3.9,<=3.12"
dependencies = [
    "numpy<2.0",
    "matplotlib",
    "pandas",
    "pymavlog",
    "scipy",
]
